style: fixed z-index

--- a/src/frontend/components/heroContent/heroContent.module.css
+++ b/src/frontend/components/heroContent/heroContent.module.css
@@ -5,6 +5,7 @@
   justify-content: center;
   margin: 0;
   padding: 0;
+  z-index: 0;
 }
 
 .carousel:hover {
