--- a/src/frontend/components/videoCard/videoCard.module.css
+++ b/src/frontend/components/videoCard/videoCard.module.css
@@ -8,7 +8,6 @@
   border-radius: 0.5rem;
   transition-property: all;
   transition-duration: 1s;
-  z-index: 4;
 }
 
 .videoCardWithoutHover {
